--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ baseurl: "/amp"
 layouts_dir: ".shared/layout"
 
 exclude: ["Gemfile", "Gemfile.lock", "README.md", "vendor"]
-include: [".shared"]
+safe: true
 
 repository: amphp/amp
 gems:
@@ -20,7 +20,7 @@ defaults:
    values:
      layout: "docs"
 
-asset_path: "/amp/.shared/asset"
+asset_path: "/amp/asset"
 
 navigation:
  - event-loop
