Use common shared asset path on production

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,7 +20,7 @@ defaults:
    values:
      layout: "docs"
 
-asset_path: "/amp/asset"
+shared_asset_path: "/amp/asset"
 
 navigation:
  - event-loop
