--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -13,6 +13,7 @@ return PhpCsFixer\Config::create()
         "cast_spaces" => true,
         "combine_consecutive_unsets" => true,
         "function_to_constant" => true,
+        "native_function_invocation" => true,
         "no_multiline_whitespace_before_semicolons" => true,
         "no_unused_imports" => true,
         "no_useless_else" => true,
