--- a/.travis.yml
+++ b/.travis.yml
@@ -52,3 +52,8 @@ after_script:
 cache:
   directories:
     - $HOME/.composer/cache/files
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
