--- a/composer.json
+++ b/composer.json
@@ -33,15 +33,16 @@
         }
     ],
     "require": {
-        "php": ">=7"
+        "php": ">=7",
+        "ext-async": "*",
+        "concurrent-php/async-api": "dev-master"
     },
     "require-dev": {
         "amphp/phpunit-util": "^1",
         "react/promise": "^2",
         "friendsofphp/php-cs-fixer": "^2.3",
         "phpunit/phpunit": "^6.0.9",
-        "phpstan/phpstan": "^0.8.5",
-        "concurrent-php/task": "1.0"
+        "phpstan/phpstan": "^0.8.5"
     },
     "autoload": {
         "psr-4": {
@@ -74,19 +75,5 @@
     "scripts": {
         "test": "@php -dzend.assertions=1 -dassert.exception=1 ./vendor/bin/phpunit",
         "code-style": "@php ./vendor/bin/php-cs-fixer fix"
-    },
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "concurrent-php/task",
-                "version": "1.0",
-                "source": {
-                    "url": "https://github.com/concurrent-php/task",
-                    "type": "git",
-                    "reference": "origin/master"
-                }
-            }
-        }
-    ]
+    }
 }
