Fix PHP versions on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,11 @@ addons:
     - libevent-dev
 
 php:
-  - 7.0
-  - 7.1
-  - 7.2
   - nightly
 
 matrix:
-  allow_failures:
-    - php: nightly
+  # allow_failures:
+  #  - php: nightly
   fast_finish: true
 
 env:
