--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,13 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
+  - 7.4snapshot
   - nightly
 
 matrix:
   allow_failures:
+    - php: 7.4snapshot
     - php: nightly
   fast_finish: true
 
