--- a/.travis.yml
+++ b/.travis.yml
@@ -54,4 +54,6 @@ after_script:
 
 cache:
   directories:
-    - $HOME/.composer/cache/files
+    - $HOME/.composer/cache
+    - $HOME/.php-cs-fixer
+    - $HOME/.local
