Fix exceptions bubbling from Coroutine::__destruct
This has been an edge case potentially hiding some exceptions. The tests have been refactored to error if the loop has watchers leaking from one test to another test.

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "php": ">=7"
     },
     "require-dev": {
+        "ext-json": "*",
         "amphp/phpunit-util": "^1",
         "amphp/php-cs-fixer-config": "dev-master",
         "react/promise": "^2",
