--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,14 @@
+docs export-ignore
 examples export-ignore
 test export-ignore
+travis export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
 phpunit.xml.dist export-ignore
-docs/asset export-ignore
+README.md export-ignore
+CONTRIBUTING.md export-ignore
+CHANGELOG.md export-ignore
+.php_cs.dist export-ignore
+.gitmodules export-ignore
+.editorconfig export-ignore
