--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ env:
   - AMP_DEBUG=true
 
 before_install:
+  - php travis/change-composer.php
   - phpenv config-rm xdebug.ini || echo "No xdebug config."
 
 install:
