--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,9 @@
         "amphp/phpunit-util": "^1",
         "amphp/php-cs-fixer-config": "dev-master",
         "react/promise": "^2",
-        "phpunit/phpunit": "^6.0.9 | ^7 | ^8",
-        "phpstan/phpstan": "^0.8.5"
+        "phpunit/phpunit": "^6.0.9 | ^7",
+        "phpstan/phpstan": "^0.8.5",
+        "pcov/clobber": "^2"
     },
     "autoload": {
         "psr-4": {
