--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ install:
 
   - composer update -n --prefer-dist
 
-  - vendor/bin/pcov clobber
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then composer require pcov/clobber ^1; fi
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then vendor/bin/pcov clobber; fi
 
   - mkdir -p coverage/cov coverage/bin
   - wget https://phar.phpunit.de/phpcov.phar -O coverage/bin/phpcov
