--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "amphp/phpunit-util": "^1",
         "amphp/php-cs-fixer-config": "dev-master",
         "react/promise": "^2",
-        "phpunit/phpunit": "^6.0.9",
+        "phpunit/phpunit": "^6.0.9 | ^7",
         "phpstan/phpstan": "^0.8.5"
     },
     "autoload": {
