Skip installing psalm on Travis with PHP 7.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ install:
   - travis/install-ev.sh
   - travis/install-event.sh
 
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then composer remove --dev vimeo/psalm; fi
   - composer update -n --prefer-dist
 
   - mkdir -p coverage/cov coverage/bin
