--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "amphp/phpunit-util": "^1",
         "amphp/php-cs-fixer-config": "dev-master",
         "react/promise": "^2",
-        "phpunit/phpunit": "^6.0.9 | ^7",
+        "phpunit/phpunit": "^9",
         "psalm/phar": "^3.11@dev",
         "jetbrains/phpstorm-stubs": "^2019.3"
     },
