Update tests for fibers

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     },
     "require-dev": {
         "ext-json": "*",
-        "amphp/phpunit-util": "^1",
+        "amphp/phpunit-util": "^2-dev",
         "amphp/php-cs-fixer-config": "dev-master",
         "react/promise": "^2",
         "phpunit/phpunit": "^9",
