Remove psalm on PHP 7.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,8 @@ jobs:
           max_attempts: 5
           retry_wait_seconds: 30
           command: |
+            php_version=$(php -v)
+            if [[ ${php_version:4:3} == "7.0" ]]; then composer remove --dev psalm/phar; fi
             composer update --optimize-autoloader --no-interaction --no-progress ${{ matrix.composer-flags }}
             composer info -D
 
