--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
           - operating-system: 'windows-latest'
             php-version: '7.4'
             job-description: 'on Windows'
+            phpunit-flags: '--debug'
 
           - operating-system: 'macos-latest'
             php-version: '7.4'
