--- a/composer.json
+++ b/composer.json
@@ -34,16 +34,23 @@
     ],
     "require": {
         "php": ">=8",
-        "ext-fiber": "*"
+        "ext-fiber": "*",
+        "revolt/event-loop": "^1-dev"
     },
     "require-dev": {
         "ext-json": "*",
-        "amphp/phpunit-util": "^2-dev",
+        "amphp/phpunit-util": "dev-v2-revolt",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^9",
         "psalm/phar": "^3.11@dev",
         "jetbrains/phpstorm-stubs": "^2019.3"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:revolt-php/event-loop.git"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Amp\\": "lib"
