--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 name: Continuous Integration
 
 on:
-  - push
-  - pull_request
+  pull_request:
+  push:
+    branches:
+      - "master"
 
 jobs:
   tests:
