--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     },
     "require-dev": {
         "ext-json": "*",
-        "amphp/phpunit-util": "dev-v2-revolt as 2.0",
+        "amphp/phpunit-util": "v2.x-dev",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^9",
         "psalm/phar": "^4.7",
