--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,10 @@
-/.* export-ignore # exclude all dotted files as mostly they are configs for other tools
-docs export-ignore
-examples export-ignore
-test export-ignore
-travis export-ignore
-phpunit.xml.dist export-ignore
-psalm.examples.xml export-ignore
-psalm.xml export-ignore
-README.md export-ignore
-CONTRIBUTING.md export-ignore
-CHANGELOG.md export-ignore
+/.*                 export-ignore # Ignore all dotted files as mostly they are configs for other tools
+docs                export-ignore
+examples            export-ignore
+test                export-ignore
+phpunit.xml.dist    export-ignore
+psalm.examples.xml  export-ignore
+psalm.xml           export-ignore
+README.md           export-ignore
+CONTRIBUTING.md     export-ignore
+CHANGELOG.md        export-ignore
