--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-/.*                 export-ignore # Ignore all dotted files as mostly they are configs for other tools
+# Ignore all dotted files as mostly they are configs for other tools
+/.*                 export-ignore
 docs                export-ignore
 examples            export-ignore
 test                export-ignore
