Rename lib → src

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,13 +1,10 @@
 <?php
 
-$config = new Amp\CodeStyle\Config();
+$config = new Amp\CodeStyle\Config;
 $config->getFinder()
-    ->in(__DIR__ . '/examples')
-    ->in(__DIR__ . '/lib')
+    ->in(__DIR__ . '/src')
     ->in(__DIR__ . '/test');
 
-$cacheDir = getenv('TRAVIS') ? getenv('HOME') . '/.php-cs-fixer' : __DIR__;
-
-$config->setCacheFile($cacheDir . '/.php_cs.cache');
+$config->setCacheFile(__DIR__ . '/.php_cs.cache');
 
 return $config;
