--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,9 @@
+# Ignore all dotted files as mostly they are configs for other tools
+/.* export-ignore
 docs export-ignore
 examples export-ignore
 test export-ignore
-travis export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
-.travis.yml export-ignore
 phpunit.xml.dist export-ignore
 README.md export-ignore
 CONTRIBUTING.md export-ignore
 CHANGELOG.md export-ignore
-.php_cs.dist export-ignore
-.gitmodules export-ignore
-.editorconfig export-ignore
