--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,7 @@
         "amphp/phpunit-util": "v2.x-dev",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^9",
-        "psalm/phar": "^4.7",
-        "jetbrains/phpstorm-stubs": "^2019.3"
+        "psalm/phar": "^4.13"
     },
     "autoload": {
         "psr-4": {
