--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,15 @@
             "email": "rdlowrey@php.net"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=8",
-        "revolt/event-loop": "v1.x-dev"
+        "revolt/event-loop": "^0.1"
     },
     "require-dev": {
         "ext-json": "*",
-        "amphp/phpunit-util": "v2.x-dev",
+        "amphp/phpunit-util": "^3",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^9",
         "psalm/phar": "^4.13"
