--- a/composer.json
+++ b/composer.json
@@ -32,15 +32,12 @@
             "email": "rdlowrey@php.net"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
         "php": ">=8.1",
         "revolt/event-loop": "^1 || ^0.2"
     },
     "require-dev": {
-        "ext-json": "*",
-        "amphp/php-cs-fixer-config": "^2-dev",
+        "amphp/php-cs-fixer-config": "^2",
         "phpunit/phpunit": "^9",
         "psalm/phar": "^4.13"
     },
