Build on PHP 8.3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,15 @@ jobs:
           - operating-system: 'ubuntu-latest'
             php-version: '8.2'
 
+          - operating-system: 'ubuntu-latest'
+            php-version: '8.3'
+
           - operating-system: 'windows-latest'
-            php-version: '8.1'
+            php-version: '8.3'
             job-description: 'on Windows'
 
           - operating-system: 'macos-latest'
-            php-version: '8.1'
+            php-version: '8.3'
             job-description: 'on macOS'
 
     name: PHP ${{ matrix.php-version }} ${{ matrix.job-description }}
