--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
             php-version: '8.3'
             job-description: 'on macOS'
 
+          - operating-system: 'ubuntu-latest'
+            php-version: '8.4'
+
     name: PHP ${{ matrix.php-version }} ${{ matrix.job-description }}
 
     runs-on: ${{ matrix.operating-system }}
