--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
             php-version: '8.4'
             psalm: 'none'
 
-    name: PHP ${{ matrix.php-version }} on ${{ runner.os }}
+    name: PHP ${{ matrix.php-version }} on ${{ matrix.operating-system }}
 
     runs-on: ${{ matrix.operating-system }}
 
